<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="Using Kotlin for Server-side Development"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView7"
            android:layout_below="@+id/textView7"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_marginTop="29dp"
            android:text="@string/kotlin_for_server_side_1" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView8"
            android:layout_below="@+id/textView8"
            android:textSize="17sp"
            android:layout_marginTop="29dp"
            android:textColor="@color/black"
            android:text="@string/kotlin_for_server_side_2" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView9"
            android:layout_below="@+id/textView9"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_marginTop="29dp"
            android:text="@string/kotlin_for_server_side_3" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView10"
            android:layout_below="@+id/textView10"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_marginTop="29dp"
            android:text="@string/kotlin_for_server_side_4" />

    </RelativeLayout>

</ScrollView>