<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="Introduction"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginTop="29dp"
        android:text="@string/what_is_kotlin_1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:textSize="17sp"
            android:layout_marginTop="29dp"
            android:textColor="@color/black"
            android:text="@string/what_is_kotlin_2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/blue"
            android:text="Kotlin+Java=Powerful Java" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_marginTop="29dp"
            android:text="@string/what_is_kotlin_3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_marginTop="29dp"
            android:text="@string/note_3" />

    </RelativeLayout>

</ScrollView>