<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="Kotlin And Android"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView12"
            android:layout_below="@+id/textView12"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_marginTop="29dp"
            android:text="@string/kotlin_for_android_1" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView13"
            android:layout_below="@+id/textView13"
            android:textSize="17sp"
            android:background="@color/golden"
            android:layout_marginTop="29dp"
            android:textColor="@color/black"
            android:text="@string/kotlin_for_android_2" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView14"
            android:layout_below="@+id/textView14"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_marginTop="29dp"
            android:text="@string/kotlin_for_android_3" />

    </RelativeLayout>

</ScrollView>