<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="Basic Syntax"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView48"
        android:layout_below="@+id/textView48"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="Defining Packages" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView49"
        android:layout_below="@+id/textView49"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:text="@string/basic_1" />

    <RelativeLayout
        android:id="@+id/layout_9"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/background_layout"
        android:layout_alignStart="@+id/textView50"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/textView50"
        android:layout_marginTop="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/basic_2"
            android:padding="10dp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/layout_9"
        android:layout_below="@+id/layout_9"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="Defining Functions" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView52"
        android:layout_below="@+id/textView52"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:text="@string/basic_3" />

    <RelativeLayout
        android:id="@+id/layout_10"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/background_layout"
        android:layout_alignStart="@+id/textView51"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/textView51"
        android:layout_marginTop="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/basic_4"
            android:padding="10dp"/>

    </RelativeLayout>
</RelativeLayout>
</ScrollView>